--- a/Myntra/test-output/old/Default suite/methods.html
+++ b/Myntra/test-output/old/Default suite/methods.html
@@ -1,26 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9d9cb5">  <td>20/04/06 22:39:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.configBC()[pri:0, instance:com.myntra.testScripts.TC_01_EditProfile@26653222]">&gt;&gt;configBC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@507084503</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>20/04/06 22:39:39</td>   <td>29910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.configBM()[pri:0, instance:com.myntra.testScripts.TC_01_EditProfile@26653222]">&gt;&gt;configBM</td> 
-<td>&nbsp;</td>  <td>main@507084503</td>   <td></td> </tr>
-<tr bgcolor="b4c3ab">  <td>20/04/06 22:40:12</td>   <td>63741</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_EditProfile.editProfile()[pri:0, instance:com.myntra.testScripts.TC_01_EditProfile@26653222]">editProfile</td> 
-  <td>main@507084503</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>20/04/06 22:40:47</td>   <td>98414</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.configAM()[pri:0, instance:com.myntra.testScripts.TC_01_EditProfile@26653222]">&lt;&lt;configAM</td> 
-<td>&nbsp;</td>  <td>main@507084503</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>20/04/06 22:40:47</td>   <td>98715</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.configAC()[pri:0, instance:com.myntra.testScripts.TC_01_EditProfile@26653222]">&lt;&lt;configAC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@507084503</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>20/04/06 22:40:49</td>   <td>99930</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.configBC()[pri:0, instance:com.myntra.testScripts.TC_02_Edit_Address@68c4039c]">&gt;&gt;configBC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@507084503</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>20/04/06 22:42:32</td>   <td>203640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.configBM()[pri:0, instance:com.myntra.testScripts.TC_02_Edit_Address@68c4039c]">&gt;&gt;configBM</td> 
-<td>&nbsp;</td>  <td>main@507084503</td>   <td></td> </tr>
-<tr bgcolor="dd9bcd">  <td>20/04/06 22:42:53</td>   <td>223810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_Edit_Address.editAddress()[pri:0, instance:com.myntra.testScripts.TC_02_Edit_Address@68c4039c]">editAddress</td> 
-  <td>main@507084503</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>20/04/06 22:42:53</td>   <td>223850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_04_Add_MensTshirt_to_Cart.menTshirt()[pri:0, instance:com.myntra.testScripts.TC_04_Add_MensTshirt_to_Cart@59f99ea]">menTshirt</td> 
-  <td>main@507084503</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>20/04/06 22:42:53</td>   <td>223865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Login_to_Myntra.logIn()[pri:0, instance:com.myntra.testScripts.TC_Login_to_Myntra@3532ec19]">logIn</td> 
-  <td>main@507084503</td>   <td></td> </tr>
-<tr bgcolor="7e7986">  <td>20/04/06 22:42:53</td>   <td>223900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_AddNewAddress.newAddress()[pri:0, instance:com.myntra.testScripts.TC_03_AddNewAddress@ae45eb6]">newAddress</td> 
-  <td>main@507084503</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>20/04/07 07:30:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.configBC()[pri:0, instance:com.myntra.testScripts.TC_05_Remove_Item_From_WishList@cb5822]">&gt;&gt;configBC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>20/04/07 07:30:58</td>   <td>13208</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.configBM()[pri:0, instance:com.myntra.testScripts.TC_05_Remove_Item_From_WishList@cb5822]">&gt;&gt;configBM</td> 
+<td>&nbsp;</td>  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="7996a0">  <td>20/04/07 07:31:07</td>   <td>22824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_05_Remove_Item_From_WishList.removeItem()[pri:0, instance:com.myntra.testScripts.TC_05_Remove_Item_From_WishList@cb5822]">removeItem</td> 
+  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>20/04/07 07:31:11</td>   <td>26646</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.configAM()[pri:0, instance:com.myntra.testScripts.TC_05_Remove_Item_From_WishList@cb5822]">&lt;&lt;configAM</td> 
+<td>&nbsp;</td>  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>20/04/07 07:31:12</td>   <td>27177</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.configAC()[pri:0, instance:com.myntra.testScripts.TC_05_Remove_Item_From_WishList@cb5822]">&lt;&lt;configAC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1476394199</td>   <td></td> </tr>
 </table>
